Fixed Chrome display bug (overflow related). Instead of incorrect display, the scrollbar in card history will be displayed in the same position regardless of size of cards present in card history. This change only effects browsers that suffer from this bug. Other browsers will display the scrollbar in the same position as before.
git-svn-id: https://arcomage.net/svn/release@1517 495dd495-0106-db11-81b0-001320b0e4cc

--- a/styles/games.css
+++ b/styles/games.css
@@ -252,6 +252,7 @@ div.history /* history of played cards */
 {
 	overflow: auto;
 	width: 98px;
+	height: 95%; /* prevents Chrome display bug (overflow related) */
 }
 
 div.chatsection /* chat section layout */
